--- a/Q2.md
+++ b/Q2.md
@@ -1,1 +1,27 @@
+1. Memory Allocation:
+   Arrays:
+     - Contiguous memory allocation.
+     - They are fixed size (static arrays) or dynamic size (dynamic arrays).
+     A single memory block is necessary for arrays during allocation.
+  Linked Lists:
+     - Non-contiguous memory allocation.
+     The system allocates memory for individual nodes one after the other.
+     The nodes within the linked list connect through pointer references.
+
+2. Performance:
+   Arrays:
+     - Fast access to elements by index (O(1)).
+     - Slower insertion/deletion in the middle (O(n)) due to shifting elements.
+  inked Lists:
+     - Slower access to elements by index (O(n)) due to traversal.
+     The performance of singly linked lists enables O(1) operations for both addition and removal of elements when done at the start or at the end of the list.
+
+3. Insertion and Deletion Operations:
+   Arrays:
+     The time complexity for end operations on arrays under available space conditions is O(1).
+     - Insertion/deletion in the middle: O(n) due to shifting.
+   Linked Lists:
+     - Insertion/deletion at the beginning: O(1).
+     Once maintained with a tail pointer the end operations run in O(n) time.
+     Inserting or deleting elements within the list requires a traversal of all elements until the desired location making it take an O(n) complexity.
 
