--- a/Q1.md
+++ b/Q1.md
@@ -1,1 +1,49 @@
-DATA 
+
+1. Constant Time - O(1);
+   - The algorithm's runtime does not depend on the input size.eg, Accessing an element in an array by index.
+     
+     int getElement(int[] arr, int index) {
+         return arr[index]; // O(1)
+     }
+     
+
+2.Linear Time - O(n):
+   - The algorithm's runtime grows linearly with the input size.eg, Traversing an array or a linked list.
+     
+     void printArray(int[] arr) {
+         for (int i = 0; i < arr.length; i++) {
+             System.out.println(arr[i]); // O(n)
+         }
+     }
+     
+
+3. Quadratic Time - O(n²):
+   - The algorithm's runtime grows proportionally to the square of the input size.eg, Nested loops iterating over the same array.
+    
+     void printPairs(int[] arr) {
+         for (int i = 0; i < arr.length; i++) {
+             for (int j = 0; j < arr.length; j++) {
+                 System.out.println(arr[i] + ", " + arr[j]); // O(n²)
+             }
+         }
+     }
+     
+
+4. Logarithmic Time - O(log n):
+   - The algorithm's runtime grows logarithmically with the input size.eg, Binary search in a sorted array.
+     
+     int binarySearch(int[] arr, int target) {
+         int left = 0, right = arr.length - 1;
+         while (left <= right) {
+             int mid = left + (right - left) / 2;
+             if (arr[mid] == target) return mid; // O(log n)
+             if (arr[mid] < target) left = mid + 1;
+             else right = mid - 1;
+         }
+         return -1;
+     }
+    
+
+5. Ignore Constants and Lower-Order Terms:
+   - Big O notation focuses on the dominant term and ignores constants or lower-order terms.Eg, O(2n + 3) simplifies to O(n).
+
